Temp fix for about images horizontal scroll

--- a/themes/modo/src/css/home/_about.scss
+++ b/themes/modo/src/css/home/_about.scss
@@ -57,6 +57,7 @@
     display: flex;
     flex-direction: column;
     padding-bottom: 8rem;
+    overflow-x: hidden;
 
     @media screen and (min-width: 768px) {
       padding-bottom: 10rem;
